# Cabane-plong-2023

./: .gitlab-ci.yml  .gitlab_ci.yml  README.md  journal.org  prolong.mkv
BirdBox/: BirdBox  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main.cpp
BirdBox/hrc/: Bird.hpp  Calcul.hpp  Camera.hpp  Couleur.hpp  Image.hpp  KNearestNeighbors.hpp  Matrix.hpp  MultilayerPerceptron.hpp  SingletonKNearestNeighbors.hpp
BirdBox/src/: Bird.cpp  Calcul.cpp  Camera.cpp  Couleur.cpp  Image.cpp  KNearestNeighbors.cpp  Matrix.cpp  MultilayerPerceptron.cpp  SingletonKNearestNeighbors.cpp
BirdBox/test/: BirdBoxTest  CMakeLists.txt  CTestTestfile.cmake  CalculTest.cpp  ImageTest.cpp  KNearestNeighborsTest.cpp  Makefile  MatrixTest.cpp  cmake_install.cmake
images/: cabane vide  ccabane oiseau 1 
log_reunions/: log_1  log_2  log_3
